--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js --ignore frontend",
+    "dev": "nodemon server/index.js --ignore Proyect_Present-codespace-",
     "build": "npm run --prefix Proyect_Present-codespace- build",
     "start": "node server/index.js"
   },
