--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/index.js --ignore frontend",
-    "build": "npm run --prefix Proyect_Present-codespace- build",
+    "dev": "nodemon server/index.js --ignore Proyect_Present-codespace-",
+    "build": "npm run --prefix Proyect_Present-codespace- dist",
     "start": "node server/index.js"
   },
   "keywords": [],
@@ -19,6 +19,15 @@
     "socket.io": "^4.6.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@jest/transform": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@vitest/ui": "^0.34.6",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "nodemon": "^2.0.22"
   }
 }
