--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server/index.js --ignore Proyect_Present-codespace-",
-    "build": "npm run --prefix Proyect_Present-codespace- dist",
+    "build": "npm run --prefix Proyect_Present-codespace- build",
     "start": "node server/index.js"
   },
   "keywords": [],
